--- a/src/App.css
+++ b/src/App.css
@@ -30,10 +30,16 @@
   margin-top: 0.5em; 
 }
 
-.ui.divider.aaa{
-
+.JobAddForm{
+  /* width: 100%;  */
+  display: flex;
+  /* flex-direction: row;  */
+  justify-content: center;
+  align-items: center;
+  /* box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2); */
+  object-fit: contain;  
+  margin-top: 3em;
 }
-
 
 
 
